--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
@@ -40,11 +40,15 @@ p {
   font-size: 14px;
 }
 .hero-section {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), #a3c4c0), url(images/gym.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.05), #47a197), url(images/gym.jpg);
+  /* background: url(images/gym.jpg); */
   background-size: cover;
+  /* object-fit: cover; */
   background-position: center;
 }
-
+.pex{
+  border: 3px solid ;
+}
 .dsp {
   padding: 2rem;
   width: 100%;
@@ -66,9 +70,10 @@ nav.navbar{
   text-align: center;
 }
 .home-text h1 {
-  font-family: "cooper", cursive;
+  font-family: "Jacques Francois Shadow", cursive;
+  /* font-weight: 700; */
   padding-top: 20px;
-  color: #dc3545;
+  color: rgb(255, 195, 195);
 }
 .home-text h4 {
   padding-top: 20px;
@@ -101,11 +106,8 @@ flex-basis: 30%;
 .dsp-itms2{
 flex-basis: 24%;
 }
-.dsp-itms img{
-    object-fit: cover;
-    border-radius: 10px;
-    width: 380px;
-    margin-top: 10px;
+.dspl .rd img{
+  border-radius: 10px;
 }
 .dsp-itemx1 {
   flex-basis: 36%;
@@ -136,7 +138,7 @@ flex-basis: 24%;
   border: 0.2rem solid #dc3545;
   border-radius: 50%;
   font-size: 1rem;
-  color: #dc3545;
+  color: white;
   margin: 2rem 1rem 3rem 0;
   transition: 0.1s ease;
 }
