--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ flex-basis: 24%;
   border: 0.2rem solid #dc3545;
   border-radius: 50%;
   font-size: 1rem;
-  color: white;
+  color: #dc3545;
   margin: 2rem 1rem 3rem 0;
   transition: 0.1s ease;
 }
